codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__single_line_final_answer_keeps_working_status_until_turn_completion.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalize_snapshot_paths(terminal.backend().vt100().screen().contents())
---
› count to 1

• 1

✦ Finishing           0s · Esc interrupt

╭─────────────────────────── tab queue ╮
┃ ›                                    │
╰ ctrl + t transcript ─────────────────╯
  GPT 5 · Default · /tmp/project
